--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-#cs1300-gallery {
-  background-color: lightblue;
-}
-
-/* Uncomment below if images are way too big.
-Selects all image tags and makes them 500px;
- */
-/*img {*/
-/*  width: 500px;*/
-/*}*/
 
 .gallery-container {
   /* TODO add styles (hint: use flex!) https://www.w3schools.com/cssref/ */
@@ -38,7 +28,7 @@ Selects all image tags and makes them 500px;
   height: auto;
 }
 
-#farm-images {
+.farm-images {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -46,10 +36,10 @@ Selects all image tags and makes them 500px;
   align-items: center;
 }
 
-#farm-images img {
-  max-width: 80%;
-  height: auto;
+.farm-images img {
   margin: 1vh 1vw;
+  max-width: 60%;
+  height: auto; 
 }
 
 #navbar-text {
@@ -61,7 +51,7 @@ h1 {
   font-size: 300%;
   text-align: center;
   font-family: open-sans, sans-serif;
-  padding: 3vh;
+  padding: 3vh 3vw 0vh 3vw;
 }
 
 h2 {
@@ -79,6 +69,11 @@ h3 {
 .navbar .navbar-nav .nav-link:hover {
   background-color: #fff;
 }  
+
+.navbar-bold:hover {
+  font-weight: 500;
+}  
+
 .navbar .navbar-nav .nav-link {
 padding: 0.6em;
 font-size: 1.2em;
@@ -132,4 +127,107 @@ footer {
 .hours-text {
   display: flex;
   justify-content: space-between;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+img {
+  /* display: block; */
+  max-width: 100%;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  margin-bottom: 0.4rem;
+  margin-block-end: 0;
+  font-size: 32px;
+}
+
+p {
+  line-height: 150%;
+  margin-block-start: 1.4rem;
+  font-size: 18px;
+}
+
+hr {
+  align-self: center;
+  border: 0.1rem solid #9cd7f8;
+  width: 100%;
+  margin: 0.1rem 0;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+}
+
+.page-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem 0;
+  padding: 6% 16%;
+}
+
+#text-center {
+  text-align: center;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-instagram {
+  background-color: #b60ad0;
+  color: white;
+}
+
+.social-media {
+  text-align: center;
+}
+
+#map-img {
+  max-width: 60%;
+  display:block;
+  margin:auto;
+}
+
+#date-picker {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reservation {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: flex-start;
 }
