--- a/styles.css
+++ b/styles.css
@@ -129,18 +129,6 @@ footer {
   justify-content: space-between;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
 img {
   /* display: block; */
   max-width: 100%;
@@ -153,20 +141,17 @@ h1 {
 h2 {
   margin-bottom: 0.4rem;
   margin-block-end: 0;
-  font-size: 32px;
+  font-size: 1.6rem;
 }
 
 p {
   line-height: 150%;
   margin-block-start: 1.4rem;
-  font-size: 18px;
+  font-size: 0.9rem;
 }
 
-hr {
-  align-self: center;
-  border: 0.1rem solid #9cd7f8;
-  width: 100%;
-  margin: 0.1rem 0;
+h3 {
+  font-size: 1.2rem;
 }
 
 .section {
@@ -178,7 +163,7 @@ hr {
   display: flex;
   flex-direction: column;
   gap: 1rem 0;
-  padding: 6% 16%;
+  padding: 0% 10% 3% 10%;
 }
 
 #text-center {
